[tool.poetry]
name = "ptyx"
version = "28.2.0"
description = "pTyX is a python precompiler for LaTeX."
authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
repository = "https://github.com/wxgeo/ptyx"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["python", "tikz", "latex", "pdf", "exam", "mcq", "student"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
sympy = "^1.10.1"
psutil = "^5.9.4"
pymupdf = "^1.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
black = "^22.1.0"
tox = "^4.3.5"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.0"
# Version 7.29+ are buggy !
python-semantic-release = "7.28.1"
ruff = "^0.0.275"

[tool.poetry.scripts]
ptyx = 'ptyx.script:ptyx'

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
warn_unused_ignores = true

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110

[tool.tox]
legacy_tox_ini = """

[tox]
skipsdist = true
isolated_build = True
envlist = py311

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run ruff ptyx tests
    poetry run mypy ptyx tests
    poetry run pytest tests ptyx/extensions
"""
