[project]
name = "ptyx"
version = "30.1.0"
description = "pTyX is a python precompiler for LaTeX."
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "python",
    "tikz",
    "latex",
    "pdf",
    "exam",
    "mcq",
    "student",
]
dependencies = [
    "numpy>=2.1.3,<3",
    "sympy>=1.10.1,<2",
    "psutil>=5.9.4",
    "pymupdf>=1.21.1",
]

[project.urls]
Repository = "https://github.com/wxgeo/ptyx"

[project.scripts]
ptyx = "ptyx.script:ptyx"

[dependency-groups]
dev = [
]

[build-system]
requires = ["uv_build>=0.9.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name= "ptyx"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning',
]

[tool.ruff]
line-length = 110

